--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <article>
         <section>
             <h2>Contact me</h2>
-            <form action="">
+            <form action="mailto:sapoliakaran@gmail.com">
                 <div>
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Your name...">
