fix: form layout

--- a/contact.html
+++ b/contact.html
@@ -36,16 +36,29 @@
             <form action="mailto:sapoliakaran@gmail.com">
                 <div>
                     <label for="fname">First Name</label>
+                </div>
+                <div>
                     <input type="text" id="fname" name="firstname" placeholder="Your name...">
                 </div>
                 <div>
                     <label for="lname">Last Name</label>
+                </div>
+                <div>
                     <input type="text" id="lname" name="lastname" placeholder="Your last name...">
                 </div>
                 <div>
                     <label for="subject">Subject</label>
-                    <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Lets talk..."></textarea>
                 </div>
+                <div>
+                    <textarea name="subject" id="subject" cols="20" rows="2" placeholder="Subject..."></textarea>
+                </div>
+                <div>
+                    <label for="body">Body</label>
+                </div>
+                <div>
+                    <textarea name="body" id="body" cols="20" rows="10" placeholder="Lets talk..."></textarea>
+                </div>
+                <div></div>
                 <div>
                     <input type="submit" value="submit">
                 </div>
