feat: stretch goals - add portfolio

--- a/skills.html
+++ b/skills.html
@@ -19,6 +19,7 @@
                 <a class="selected" href="skills.html">Skills</a>
                 <a href="work-history.html">Work History</a>
                 <a href="contact.html">Contact</a>
+                <a href="https://karan-sapolia.netlify.com/">Portfolio</a>
             </nav>
         </div>
         <div class="header-section-2">
