--- a/work-history.html
+++ b/work-history.html
@@ -18,6 +18,7 @@
                 <a href="skills.html">Skills</a>
                 <a class="selected" href="#">Work History</a>
                 <a href="contact.html">Contact</a>
+                <a href="https://karan-sapolia.netlify.com/">Portfolio</a>
             </nav>
         </div>
         <div class="header-section-2">
@@ -34,18 +35,25 @@
         </div>
     </header>
     <article>
-        <section>
-            <h2>Work History</h2>
+        <h2>Work History</h2>
+        <section class="work-history-section">
+
             <div>
                 <h2>Mozilla</h2>
+            </div>
+            <div>
                 <p>Open Source Contributor in FxA, Firefox Core and DevTools teams</p>
             </div>
             <div>
                 <h2>Alo Autoworks</h2>
+            </div>
+            <div>
                 <p>Full Stack Developer - React, Node, MongoDB, Jest</p>
             </div>
             <div>
                 <h2>NITI Aayog</h2>
+            </div>
+            <div>
                 <p>Intern - Data Management & Analysis</p>
             </div>
         </section>
