--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
                 <a href="skills.html">Skills</a>
                 <a href="work-history.html">Work History</a>
                 <a class="selected" href="contact.html">Contact</a>
+                <a href="https://karan-sapolia.netlify.com/">Portfolio</a>
             </nav>
         </div>
         <div class="header-section-2">
