--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="skills.html">Skills</a>
         <a href="work-history.html">Work History</a>
         <a href="contact.html">Contact</a>
+        <a href="https://karan-sapolia.netlify.com/">Portfolio</a>
       </nav>
     </div>
     <div class="header-section-2">
